[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/menu/menu_option.gd" type="Script" id=1]
[ext_resource path="res://fonts/LobsterTwo-Regular.fnt" type="BitmapFont" id=2]

[node name="option_menu" type="Node"]

script/script = ExtResource( 1 )

[node name="option_menu_btn_back" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 248.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="userName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 100.0
margin/right = 495.0
margin/bottom = 130.0
text = "your name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


